# Shield_NM_CT

./: .gitignore  README.md  commit_messages.md  programmers_help.md  requirements.txt  setup.cfg
helper_scripts/: replace_import.py  search_files.py
src/Shield_NM_CT/: Shield_NM_CT.py  resources.py  resources.qrc
src/Shield_NM_CT/config/: Shield_NM_CT_constants.py  config_classes.py  config_func.py  shield_constants_functions.py
src/Shield_NM_CT/config_defaults/: colormaps.yaml  ct_doserates.yaml  ct_models.yaml  isotopes.yaml  materials.yaml  radionuclide_information_booklet_2025_values.csv  shield_data.yaml
src/Shield_NM_CT/scripts/: calculate_dose.py  mini_methods.py  mini_methods_format.py  modified_scipy_io_idl.py  read_idl_dat.py
src/Shield_NM_CT/ui/: colormaps.py  messageboxes.py  reusable_widgets.py  settings.py  settings_reusables.py  settings_stacks.py  ui_dialogs.py  ui_main.py  (+1 more)
tests/: test_gui.py
tests/CT_project/: CTsources.csv  OTsources.csv  areas.csv  points.csv  walls.csv
tests/SiemensCT_floor_above_verify/: CTsources.csv  NMsources.csv  areas.csv  general_values.yaml  points.csv  scale.csv  walls.csv
tests/SiemensCT_verify/: general_values.yaml  points.csv
tests/simple_project/: CTsources.csv  NMsources.csv  OTsources.csv  general_values.yaml  points.csv  scale.csv  walls.csv
tests/simple_project_90/: areas.csv  walls.csv
tests/simple_project_CT/: CTsources.csv  general_values.yaml  points.csv  scale.csv
tests/simple_project_oblique/: areas.csv  walls.csv
tests/simple_project_oblique_90/: NMsources.csv  points.csv  walls.csv
tests/testdat_output/: CTsources.csv  NMsources.csv  areas.csv  general_values.yaml  scale.csv  walls.csv
