[metadata]
name = Shield_NM_CT
version = 2.0.4
description = Calculating structural shielding for nuclear medicine and CT facilities
long_description = file: README.md
keywords = radiation protection, shielding, nuclear medicine, computed tomography
license = GNU General Public License v2.0
license_files = LICENSE.txt
author = Ellen Wasbo
author-email = ellen.wasbo@sus.no
classifiers = 
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
	=src
packages=find:
install_requires = 
	matplotlib>=3.7.1
	numpy
	pandas
	PyQt5
	PyYAML
	scikit_image>=0.19.2

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    shield_nm_ct = shield_nm_ct.shield_nm_ct:main