[metadata]
name = Shield_NM_CT
version = 2.1.5
description = Calculating structural shielding for nuclear medicine and CT facilities
long_description = file: README.md
keywords = radiation protection, shielding, nuclear medicine, computed tomography
license = GNU General Public License v2.0
license_files = LICENSE.txt
author = Ellen Wasbo
author-email = ellen.wasbo@sus.no
classifiers = 
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
	=src
packages=find:
install_requires = 
	matplotlib==3.10.5
	numpy==2.3.2
	pandas==2.2.3
	PyQt6==6.8.1
	PyYAML==6.0.2
	scikit_image==0.25.2

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    shield_nm_ct = shield_nm_ct.shield_nm_ct:main